--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,128 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <meta name="description" content="">
-  <!-- Meta Partage -->
-  <!-- Favicon -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@CamilleEspert">
+  <meta name="twitter:creator" content="@CamilleEspert">
+  <meta name="twitter:title" content="TFA">
+  <meta name="twitter:description" content="">
+  <!-- Twitter summary card with large image must be at least 280x150px -->
+  <meta name="twitter:image" content="https://camille-espert.be/projets/tfa/asset/image/meta-pic.jpg">
+  <!-- Open Graph data -->
+  <meta property="og:site_name" content="TFA">
+  <meta property="og:title" content="TFA">
+  <meta property="og:description" content="">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://camille-espert.be/projets/tfa">
+  <meta property="og:image" content="https://camille-espert.be/projets/tfa/asset/image/meta-pic.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="628">
+  <title>TFA - Camille Espert - HEAJ</title>
+
+  <link rel="stylesheet" href="https://use.typekit.net/gno1llj.css">
+  <link rel="stylesheet" href="https://use.typekit.net/gno1llj.css">
 
   <link rel="stylesheet" href="styles/app.css">
 
   <script src="scripts/app.js" defer></script>
+
 </head>
+
 <body>
 
-  <img src="assets/images/logo-heaj.png">
-  <h1>Hello world</h1>
+  <header>
+
+    <div class="container-image">  
+
+      <nav class="menu"> 
+
+        <ul class="menu__liste">
+            <li class="menu__el"><a href="#rec">Recherche</a></li>
+            <li class="menu__el"><a href="#ren">Rencontres</a></li>
+            <li class="menu__el"><a href="#hyp">Hypothèses</a></li>
+            <li class="menu__el"><a href="#pre">Présentation</a></li>
+            <li class="menu__el"><a href="#con">Conclusion</a></li>
+        </ul> 
+
+      </nav>
+
+      <img class="img-soutien" src="assets/images/image-soutien.jpg" alt="Image de soutien"> 
+      <h1 class="titre-image">Un allié précieux : L'importance du soutien de l'entourage dans la poursuite d'un régime</h1> 
+        
+    
+        <!-- <button class="menu__burger">
+            <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="-8 0 32 32">
+                <path d="M15.4 12.6H.84c-.48 0-.84-.36-.84-.84s.36-.84.84-.84h14.52c.48 0 .84.36.84.84.04.44-.36.84-.8.84zm0 4.24H.84c-.48 0-.84-.36-.84-.84s.36-.84.84-.84h14.52c.48 0 .84.36.84.84s-.36.84-.8.84zm0 4.24H.84c-.48 0-.84-.36-.84-.84s.36-.84.84-.84h14.52c.48 0 .84.36.84.84s-.36.84-.8.84z"/>
+            </svg>
+        </button>  -->
+
+    </div>
+
+  </header>
+
+  <main>
+
+    <section class="section" id="rec">
+
+      <h2 class="test-title">La recherche<span class="barre"></span></h2> 
+
+      <P>Pour mon travail de fin d'année, il était essentiel de trouver un thème qui suscite ma motivation et mon intérêt. J'ai rapidement réalisé que rien ne pourrait me toucher davantage que d'aborder le sujet du régime alimentaire. Non seulement ce thème me concerne personnellement, mais il impacte également un large public. je me suis dit que ça pourrait être un sujet intéressant à développer.</P>
+
+    </section>
+
+    <section class="section" id="ren">
+
+      <h2>Rencontres avec les utilisateurs</h2> 
+
+      <P>Dans le cadre de mon travail de fin d’année portant sur le régime, j'ai interrogé plusieurs personnes de différents âges. L’objectif était d'identifier les problèmes qu’ils rencontraient dans la mise en place d’un régime alimentaire.</P>
+
+      <P>Pour ce faire, j’ai d'abord réalisé un guide d’entretien ce qui me permettait de mettre en avant les meilleures questions à poser à mes utilisateurs, les questions les plus pertinentes qui me permettrait de trouver mes hypothèses et ma solution.</P>
+
+      <P>J’ai réalisés quelques interviews qui ne m’ont pas été très utiles car à part dire “oui” ou “non” la personne que j'interrogeais  ne savait pas trop quoi répondre ce qui m’a fait me remettre en question par rapport à mon questionnaire qui n’étais pas bien développé, il ne me permettais pas de trouver des hypothèses. J’ai donc effectué un autre formulaire qui lui, à été plus concluant.</P>
+
+    </section>
+
+    <section class="section" id="hyp">
+
+      <h2>Exploration d’hypothèses</h2> 
+
+      <P>Après avoir réalisé mes interviews, j’ai pu émettre quelques hypothèses de ce qui pourrait être le plus adapté pour mon projet, ces hypothèses se basent principalement sur la motivation ou le soutien car c’est ce qui est ressorti le plus pendant mes interviews.</P>
+
+      <P>Il est fréquent que les personnes arrêtent leur régime alimentaire ou leur rééquilibrage nutritionnel simplement parce qu'elles se retrouvent seules à faire attention à leur alimentation, tandis que le reste de leur famille continue de manger de manière peu saine. Cela peut être difficile à gérer. De même, recevoir occasionnellement un message de soutien peut avoir un impact positif sur le moral et aider à ne pas abandonner.</P>
+
+      <P>J'ai donc émis plusieurs hypothèses qui pourraient être intéressantes à explorer, telles qu'une application proposant des objectifs quotidiens pour maintenir la motivation, ou encore une application qui envoie un message de soutien chaque jour, voire la création d'un groupe de discussion.</P>
+
+      <P>Finalement l’hypothèse qui m’a le plus convaincu c’est concevoir une application de soutien destinée à l’entourage et à la famille. En effet, il est vrai que le soutien de l’entourage à tendance à disparaître, et la plupart du temps, quand on demande à quelqu’un si il a du soutien venant de son entourage ce n’est pas forcément le cas.</P>
+
+    </section> 
+
+  </main>
+
+  <footer class="footer">
+    <small class="credits">
+      <a href="https://dwt.heaj.be/" target="_blank">
+        <svg class="dwt" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 71.6 25" style="enable-background:new 0 0 71.6 25" xml:space="preserve">
+          <path class="dwt__txt" d="M0 20.41V0h5.63c1.98 0 3.71.36 5.18 1.06 1.47.71 2.61 1.81 3.43 3.3.81 1.49 1.22 3.41 1.22 5.74 0 2.34-.4 4.27-1.21 5.79-.8 1.52-1.92 2.66-3.35 3.4-1.43.74-3.09 1.11-4.99 1.11H0zm4.63-3.73h.75c1.06 0 2-.21 2.8-.63.8-.42 1.43-1.11 1.88-2.07.45-.96.67-2.25.67-3.88s-.22-2.91-.67-3.83c-.45-.92-1.07-1.58-1.87-1.97-.8-.39-1.74-.58-2.8-.58h-.76v12.96zM19.44 20.41 16.72 0h4.79l.63 10.86c.02.88.04 1.72.05 2.54.01.81.03 1.68.05 2.6h.13c.15-.92.31-1.79.49-2.61.18-.82.35-1.66.52-2.52l1.38-5.7h2.94l1.28 5.7c.17.83.34 1.66.52 2.49.18.82.34 1.71.49 2.64h.13c.02-.94.04-1.82.06-2.64l.06-2.49L30.77 0h4.48l-2.5 20.41H27.8l-1.19-6.32c-.13-.65-.24-1.3-.34-1.97-.1-.67-.18-1.3-.22-1.91h-.09c-.06.61-.14 1.24-.22 1.91-.08.67-.19 1.33-.31 1.97l-1.19 6.32h-4.8zM42.45 20.41V3.88h-6.1V0h16.84v3.88h-6.1v16.53h-4.64z"/>
+          <path class="dwt__und" d="M57.69 20.41H71.6V25H57.69z"/>
+        </svg>
+      </a>
+        <span>
+            <a class="link" href="https://www.camille-espert.be" target="_blank">Camille Espert</a>
+            © 2022
+        </span>
+        <span>
+            <a class="link" href="credits.html" target="_blank">Crédits</a>
+        </span>
+    </small>
+    <ul class="subnav">
+        <li class="subnav__el">
+            <a class="link" href="ui-kit.html">UI-Kit</a>
+        </li>
+    </ul>
+</footer>
 
 </body>
 </html>
