modif first section

--- a/src/index.html
+++ b/src/index.html
@@ -69,11 +69,17 @@
 
   <main>
 
-    <section class="section" id="rec">
+    <section class="section section-top" id="rec">
 
-      <h2 class="test-title">La recherche<span class="barre"></span></h2> 
+      <div class="wave-section">
 
-      <P>Pour mon travail de fin d'année, il était essentiel de trouver un thème qui suscite ma motivation et mon intérêt. J'ai rapidement réalisé que rien ne pourrait me toucher davantage que d'aborder le sujet du régime alimentaire. Non seulement ce thème me concerne personnellement, mais il impacte également un large public. je me suis dit que ça pourrait être un sujet intéressant à développer.</P>
+        <img class="img-interview" src="assets/images/image-interview.jpg" alt="Image interview">
+
+        <h2 class="test-title">La recherche<span class="barre"></span></h2> 
+
+        <P>Pour mon travail de fin d'année, il était essentiel de trouver un thème qui suscite ma motivation et mon intérêt. J'ai rapidement réalisé que rien ne pourrait me toucher davantage que d'aborder le sujet du régime alimentaire. Non seulement ce thème me concerne personnellement, mais il impacte également un large public. je me suis dit que ça pourrait être un sujet intéressant à développer.</P>
+
+      </div>
 
     </section>
 
