--- a/src/index.html
+++ b/src/index.html
@@ -71,13 +71,24 @@
 
     <section class="section section-top" id="rec">
 
-      <div class="wave-section">
+      <div class="wave-section img--text">
 
-        <img class="img-interview" src="assets/images/image-interview.jpg" alt="Image interview">
+          <img class="img-interview" src="assets/images/recherche.jpg" alt="Image interview">
+          
+          <div class="img--text__flex">
 
-        <h2 class="test-title">La recherche<span class="barre"></span></h2> 
+          <h2 class="test-title">La recherche<span class="barre"></span></h2> 
 
-        <P>Pour mon travail de fin d'année, il était essentiel de trouver un thème qui suscite ma motivation et mon intérêt. J'ai rapidement réalisé que rien ne pourrait me toucher davantage que d'aborder le sujet du régime alimentaire. Non seulement ce thème me concerne personnellement, mais il impacte également un large public. je me suis dit que ça pourrait être un sujet intéressant à développer.</P>
+        <div class="parag">
+
+          <P>Pour mon travail de fin d'année, il était essentiel de trouver un thème qui suscite ma motivation et mon intérêt.</P>
+          <p>J'ai rapidement réalisé que rien ne pourrait me toucher davantage que d'aborder le sujet du régime alimentaire, non seulement ce thème me concerne personnellement, mais il impacte également un large public.</p>
+          <p>Je me suis dit que ça pourrait être un sujet intéressant à développer.</p>
+
+        </div>
+          <img class="svg-fruits" src="assets/images/fruits.svg" alt="svg d'une pastèque, d'une pomme et d'un raisin">
+
+        </div>
 
       </div>
 
@@ -132,6 +143,7 @@
             <a class="link" href="ui-kit.html">UI-Kit</a>
         </li>
     </ul>
+
 </footer>
 
 </body>
