modifications page crédit

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DWMA project</title>
+  <title>TFA - Camille Espert - HEAJ - DWT</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -24,7 +24,8 @@
   <meta property="og:image" content="https://camille-espert.be/projets/tfa/asset/image/meta-pic.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628">
-  <title>TFA - Camille Espert - HEAJ</title>
+
+  
 
   <link rel="stylesheet" href="https://use.typekit.net/gno1llj.css">
   <link rel="stylesheet" href="https://use.typekit.net/gno1llj.css">
@@ -54,14 +55,17 @@
 
       </nav>
 
-      <img class="img-soutien" src="assets/images/image-soutien.jpg" alt="Image de soutien"> 
+      <img class="img-soutien" src="assets/images/image-soutien-1@.jpg" alt="Image de soutien"
+      srcset="assets/images/image-soutien-1@.jpg 1x, assets/images/image-soutien-2@.jpg 2x"
+      loading="lazy" decoding="async"> 
+
       <h1 class="titre-image">Un allié précieux : L'importance du soutien de l'entourage dans la poursuite d'un régime</h1> 
       
         <button class="menu__burger">
-            <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="-8 0 32 32">
-                <path d="M15.4 12.6H.84c-.48 0-.84-.36-.84-.84s.36-.84.84-.84h14.52c.48 0 .84.36.84.84.04.44-.36.84-.8.84zm0 4.24H.84c-.48 0-.84-.36-.84-.84s.36-.84.84-.84h14.52c.48 0 .84.36.84.84s-.36.84-.8.84zm0 4.24H.84c-.48 0-.84-.36-.84-.84s.36-.84.84-.84h14.52c.48 0 .84.36.84.84s-.36.84-.8.84z"/>
-            </svg>
-        </button> 
+            <span class="top"></span>
+            <span class="middle"></span>
+            <span class="bottom"></span>
+        </button>  
 
     </div>
 
@@ -74,7 +78,9 @@
       <div class="wave-section img--text">
 
         <div class="image-container">
-          <img class="img-search" src="assets/images/recherche.jpg" alt="Image interview">
+          <img class="img-search" src="assets/images/interview-1@.jpg" alt="Image interview"
+          srcset="assets/images/interview-1@.jpg 1x, assets/images/interview-2@.jpg 2x"
+          loading="lazy" decoding="async">
         </div>
 
           <div class="img--text__flex">
@@ -88,7 +94,8 @@
           <p>Je me suis dit que ça pourrait être un sujet intéressant à développer.</p>
 
         </div>
-          <img class="svg-fruits" src="assets/images/fruits.svg" alt="svg d'une pastèque, d'une pomme et d'un raisin">
+          <img class="svg-fruits" src="assets/images/fruits.svg" alt="svg d'une pastèque, d'une pomme et d'un raisin"
+          loading="lazy" decoding="async">
 
         </div>
 
@@ -100,30 +107,31 @@
 
       <div class="title-container">
         <span class="bar"></span>
-        <h2 class="title title-med">Rencontres avec les utilisateurs</h2>
+        <h2 class="title title--med">Rencontres avec les utilisateurs</h2>
         <span class="bar"></span>
       </div>
 
       <div class="container-flex">
 
       <div class="container-search">
-        <img class="svg-age" src="assets/images/age.svg" alt="Image d'interview">
-        <P>Dans le cadre de mon travail de fin d’année portant sur le régime, j'ai interrogé plusieurs personnes de différents âges. L’objectif était d'identifier les problèmes qu’ils rencontraient dans la mise en place d’un régime alimentaire.</P>
+        <img class="svg-age" src="assets/images/age.svg" alt="svg de d'une personne agée et d'une personne plus jeune"
+        loading="lazy" decoding="async">
+        <P class="test-bar">Dans le cadre de mon travail de fin d’année portant sur le régime, j'ai interrogé plusieurs personnes de différents âges. L’objectif était d'identifier les problèmes qu’ils rencontraient dans la mise en place d’un régime alimentaire.</P>
       </div>
 
       <div class="container-search">
-        <img class="svg-inter" src="assets/images/interrogation.svg" alt="trois svg de point d'interrogation">
-        <P>Pour ce faire, j’ai d'abord réalisé un guide d’entretien ce qui me permettait de mettre en avant les meilleures questions à poser à mes utilisateurs, les questions les plus pertinentes qui me permettrait de trouver mes hypothèses et ma solution.</P>
+        <img class="svg-inter" src="assets/images/interrogation.svg" alt="trois svg de point d'interrogation"
+        loading="lazy" decoding="async">
+        <P class="test-bar">Pour ce faire, j’ai d'abord réalisé un guide d’entretien ce qui me permettait de mettre en avant les meilleures questions à poser à mes utilisateurs, les questions les plus pertinentes qui me permettrait de trouver mes hypothèses et ma solution.</P>
       </div> 
 
       <div class="container-search">
-        <img class="svg-ok" src="assets/images/ok.svg" alt="svg vrai">
-        <P>J’ai réalisés quelques interviews qui ne m’ont pas été très utiles car à part dire “oui” ou “non” la personne que j'interrogeais  ne savait pas trop quoi répondre ce qui m’a fait me remettre en question par rapport à mon questionnaire qui n’étais pas bien développé, il ne me permettais pas de trouver des hypothèses. J’ai donc effectué un autre formulaire qui lui, à été plus concluant.</P>
+        <img class="svg-ok" src="assets/images/ok.svg" alt="svg du signe vrai pour dire correct"
+        loading="lazy" decoding="async">
+        <P class="test-bar">J’ai réalisés quelques interviews qui ne m’ont pas été très utiles car à part dire “oui” ou “non” la personne que j'interrogeais  ne savait pas trop quoi répondre ce qui m’a fait me remettre en question par rapport à mon questionnaire qui n’étais pas bien développé, il ne me permettais pas de trouver des hypothèses. J’ai donc effectué un autre formulaire qui lui, à été plus concluant.</P>
       </div>
       
     </div>
-
-    <button class="btn-stat">Explorer les données</button>
 
     </section>
 
@@ -131,7 +139,7 @@
 
       <div class="title-container">
         <span class="bar"></span>
-        <h2 class="title title-med">Exploration d'hypothèses</h2>
+        <h2 class="title title--med">Exploration d'hypothèses</h2>
         <span class="bar"></span>
       </div>
 
@@ -161,9 +169,76 @@
 
       <div class="title-container">
         <span class="bar"></span>
-        <h2 class="title title-med">Boostez votre expérience : Explorez nos fonctionnalités</h2>
+        <h2 class="title title--med">Boostez votre expérience : Explorez nos fonctionnalités</h2>
         <span class="bar"></span>
       </div>
+
+      <!-- <p>J’ai donc réfléchi à quelques fonctionnalitées qui pourraient être intéressante pour mon application.</p> -->
+
+      <div class="fond__slider">
+      <div class="slider">
+          <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav"/>
+          <input type="radio" name="slider" title="slide2" class="slider__nav"/>
+          <input type="radio" name="slider" title="slide3" class="slider__nav"/>
+          <input type="radio" name="slider" title="slide4" class="slider__nav"/>
+          <div class="slider__inner">
+          <div class="slider__contents"><i class="slider__image fa fa-codepen"></i>
+            <img class="svg-notif" src="assets/images/notif.svg" alt="svg d'une cloche de notification"
+            loading="lazy" decoding="async">
+              <p class="slider__txt">Notifications et rappels</p>
+          </div>
+          <div class="slider__contents"><i class="slider__image fa fa-newspaper-o"></i>
+            <img class="svg-notif" src="assets/images/message.svg" alt="svg de l'icone message"
+            loading="lazy" decoding="async">
+              <p class="slider__txt">Communauté et soutien</p>
+          </div>
+          <div class="slider__contents"><i class="slider__image fa fa-television"></i>
+            <img class="svg-notif" src="assets/images/follow.svg" alt="svg d'un icone d'une personne qui marche"
+            loading="lazy" decoding="async">
+              <p class="slider__txt">Suivi de l'activité physique</p>
+          </div>
+          <div class="slider__contents"><i class="slider__image fa fa-diamond"></i>
+            <img class="svg-notif" src="assets/images/journal.svg" alt="svg de l'icone d'un journal"
+            loading="lazy" decoding="async">
+              <p class="slider__txt">Journalisation des émotions et du bien-être</p>
+          </div>
+          </div>
+      </div> 
+      </div>
+
+      <button class="btn btn-stat" id="btn_legende">Plus de précision</button>
+
+      <div id="legende" class="hidden">
+        <div class="legende">
+        <div class="border-legend">
+          <img class="svg-notif" src="assets/images/notif.svg" alt="svg d'une cloche de notification"
+          loading="lazy" decoding="async">
+          <p class="pad-no">Envoyez des rappels aux utilisateurs pour les encourager à suivre leur régime, à enregistrer leurs repas et à atteindre leurs objectifs. Ces notifications peuvent être personnalisées en fonction des préférences de chaque utilisateur.</p>
+        </div>
+        <div class="border-legend">
+          <img class="svg-notif" src="assets/images/message.svg" alt="svg de l'icone message"
+          loading="lazy" decoding="async">
+          <p class="pad-no">Intégrez une fonctionnalité de réseau social ou un forum où les utilisateurs peuvent se connecter, échanger des conseils, partager des recettes et se soutenir mutuellement dans leur parcours de régime.</p>
+        </div>
+        <div class="border-legend">
+          <img class="svg-notif" src="assets/images/follow.svg" alt="svg d'un icone d'une personne qui marche"
+          loading="lazy" decoding="async">
+          <p class="pad-no">Permettez aux utilisateurs de suivre leur activité physique en intégrant des fonctionnalités de suivi des pas, de suivi des séances d'entraînement, de calcul des calories brûlées, etc.</p>
+        </div>
+        <div class="border-legend">
+          <img class="svg-notif" src="assets/images/journal.svg" alt="svg de l'icone d'un journal"
+          loading="lazy" decoding="async">
+          <p class="pad-no">Ajoutez une fonctionnalité permettant aux utilisateurs de journaliser leurs émotions, leurs sensations de faim, leur niveau d'énergie, etc. Cela peut aider à identifier les schémas alimentaires et à encourager une alimentation consciente.</p>
+        </div>
+      </div>
+
+      </div>
+
+    </section>
+
+    <section class="section section-top" id="rec">
+
+      <div class="wave-section img--text"></div>
 
     </section>
 
@@ -182,7 +257,7 @@
             © 2022
         </span>
         <span>
-            <a class="link" href="credits.html" target="_blank">Crédits</a>
+            <a class="link" href="credits.html">Crédits</a>
         </span>
     </small>
     <ul class="subnav">
