modifications css page credit

--- a/src/credits.html
+++ b/src/credits.html
@@ -70,31 +70,26 @@
             </div>
 
             <div class="cred-border">
-                <h3 class="title title--light">Images utilisées</h3>
+                <h3 class="title title--light">Polices utilisées</h3>
                 <ul class="credits__list">
                     <li class="credits__el">
                         <img class="svg-cred" src="assets/images/link-credit.svg" alt="svg de l'icone de lien">
-                        <a class="link link--credits" href="https://www.svgrepo.com/" target="_blank">svgrepo</a>
+                        <a class="link link--credits" href="https://fonts.adobe.com/fonts/june-expt-variable" target="_blank">June Expt Variable</a>
                     </li>
 
                     <li class="credits__el">
                         <img class="svg-cred" src="assets/images/link-credit.svg" alt="svg de l'icone de lien">
-                        <a class="link link--credits" href="https://unsplash.com/fr" target="_blank">Unsplash</a>
+                        <a class="link link--credits" href="https://fonts.adobe.com/fonts/mr-eaves-xl" target="_blank">Mr Eaves XL</a>
                     </li>
                 </ul>
             </div>
 
             <div class="cred-border">
-                <h3 class="title title--light">Images utilisées</h3>
+                <h3 class="title title--light">Inspirations</h3>
                 <ul class="credits__list">
                     <li class="credits__el">
                         <img class="svg-cred" src="assets/images/link-credit.svg" alt="svg de l'icone de lien">
-                        <a class="link link--credits" href="https://www.svgrepo.com/" target="_blank">svgrepo</a>
-                    </li>
-
-                    <li class="credits__el">
-                        <img class="svg-cred" src="assets/images/link-credit.svg" alt="svg de l'icone de lien">
-                        <a class="link link--credits" href="https://unsplash.com/fr" target="_blank">Unsplash</a>
+                        <a class="link link--credits" href="https://www.behance.net/" target="_blank">Behance</a>
                     </li>
                 </ul>
             </div>
