--- a/src/ui-kit.html
+++ b/src/ui-kit.html
@@ -53,11 +53,36 @@
             <span class="bar"></span>
         </div>
 
+      <h1 class="title">Titre Principal</h1>
+      <h2 class="title">Sous titre</h2>
+      <h3 class="title">Sous titre 2</h3>
+
+      <div class="square-flex">
+
+        <div class="square square--1"></div>
+        <div class="square square--2"></div>
+        <div class="square square--3"></div>
+        <div class="square square--4"></div>
+
+      </div>
+
+
+
+
+
+
+
+
+
+        <a href="index.html">
+          <img class="svg-arrow" src="assets/images/arrow.svg" alt="svg d'une flèche">
+        </a>
+
     </section>
 
   </main>
 
-  <footer class="footer footer-line">
+  <footer class="footer">
     <small class="credits">
       <a href="https://dwt.heaj.be/" target="_blank">
         <svg class="dwt" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 71.6 25" style="enable-background:new 0 0 71.6 25" xml:space="preserve">
@@ -69,17 +94,17 @@
             <a class="link" href="https://www.camille-espert.be" target="_blank">Camille Espert</a>
             © 2022
         </span>
-        <span>
-            <a class="link" href="credits.html">Crédits</a>
-        </span>
     </small>
     <ul class="subnav">
         <li class="subnav__el">
             <a class="link" href="ui-kit.html">UI-Kit</a>
         </li>
+        <li class="subnav__el">
+          <a class="link" href="credits.html">Crédits</a>
+      </li>
     </ul>
 
-</footer>
+  </footer>
 
 </body>
 </html>
