--- a/src/ui-kit.html
+++ b/src/ui-kit.html
@@ -34,6 +34,8 @@
 
   <script src="scripts/app.js" defer></script>
 
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_package_v0.16/favicon.ico">
+
 </head>
 
 <body class="container">
@@ -65,14 +67,6 @@
         <div class="square square--4"></div>
 
       </div>
-
-
-
-
-
-
-
-
 
         <a href="index.html">
           <img class="svg-arrow" src="assets/images/arrow.svg" alt="svg d'une flèche">
