modifications ui-kit + ajout video

--- a/src/index.html
+++ b/src/index.html
@@ -274,10 +274,15 @@
           <p class="color-txt">En conclusion, mon travail de fin d'études met l'accent sur l'importance du soutien de l'entourage dans le contexte des régimes alimentaires, le nom de mon application serait "supportiveEats".</p>
           <p class="color-txt">Grâce à une application spécialement conçue, j'ai cherché à fournir des fonctionnalités visant à faciliter ce soutien, à renforcer la motivation et à améliorer les résultats des régimes.</p>
           <p class="color-txt">Je suis impatient de partager avec vous les résultats de mes recherches et les démonstrations de l'application.</p>
-        </div>
-      </div>
+          <p class="color-txt">Je vous laisse avec cette petite vidéo pour conclure.</p>
 
-    
+      <video class="vid-ccl" src="assets/images/tfa-vid.mp4" width="640" height="480" controls muted poster="assets/images/poster-vid.jpg">
+        Votre navigateur ne prend pas en charge la balise vidéo.
+      </video>
+
+    </div>
+  </div>
+
     </section>
 
   </main>
