--- a/src/credits.html
+++ b/src/credits.html
@@ -90,6 +90,11 @@
                         <img class="svg-cred" src="assets/images/link-credit.svg" alt="svg de l'icone de lien">
                         <a class="link link--credits" href="https://www.behance.net/" target="_blank">Behance</a>
                     </li>
+
+                    <li class="credits__el">
+                        <img class="svg-cred" src="assets/images/link-credit.svg" alt="svg de l'icone de lien">
+                        <a class="link link--credits" href="https://chat.openai.com/" target="_blank">ChatGPT</a>
+                    </li>
                 </ul>
             </div>
         </div>
