--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,14 @@
   <meta name="twitter:title" content="TFA">
   <meta name="twitter:description" content="">
   <!-- Twitter summary card with large image must be at least 280x150px -->
-  <meta name="twitter:image" content="https://camille-espert.be/projets/tfa/asset/image/meta-pic.jpg">
+  <meta name="twitter:image" content="https://camille-espert.be/projets/tfa/assets/images/meta-fcb.png">
   <!-- Open Graph data -->
   <meta property="og:site_name" content="TFA">
   <meta property="og:title" content="TFA">
   <meta property="og:description" content="">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://camille-espert.be/projets/tfa">
-  <meta property="og:image" content="https://camille-espert.be/projets/tfa/asset/image/meta-pic.jpg">
+  <meta property="og:image" content="https://camille-espert.be/projets/tfa/assets/images/meta-twitter.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628">
 
