--- a/src/ui-kit.html
+++ b/src/ui-kit.html
@@ -14,7 +14,7 @@
   <meta name="twitter:title" content="TFA">
   <meta name="twitter:description" content="">
   <!-- Twitter summary card with large image must be at least 280x150px -->
-  <meta name="twitter:image" content="https://camille-espert.be/projets/tfa/asset/image/meta-pic.jpg">
+  <meta name="twitter:image" content="https://camille-espert.be/projets/tfa/assets/images/meta-pic.jpg">
   <!-- Open Graph data -->
   <meta property="og:site_name" content="TFA">
   <meta property="og:title" content="TFA">
@@ -63,7 +63,16 @@
 
       </div>
 
-      <button class="">Plus de précision</button>
+      <h2 class="title title--ui title--ui__2">polices</h2>
+
+      <p>June Expt Variable</p>
+      <p class="pad-ui">Mr Eaves XL Mod OT</p>
+
+
+
+
+
+      <!-- <button class="">Plus de précision</button> -->
 
         <a href="index.html">
           <img class="svg-arrow" src="assets/images/arrow.svg" alt="svg d'une flèche">
