--- a/src/index.html
+++ b/src/index.html
@@ -57,16 +57,15 @@
 
       </nav>
 
-      <img class="img-soutien img-phone" src="assets/images/image-soutien-phone-1@.jpg" alt="Image de soutien"
-      srcset="assets/images/image-soutien-phone-1@.jpg 1x, assets/images/image-soutien-phone-2@.jpg 2x"
-      loading="lazy" decoding="async"> 
+     
+      <div class="img-soutien">
+        <h1 class="title-img">SupportiveEats
+          <span class="title__span">
+            L'importance du soutien de l'entourage dans la poursuite d'un régime
+            </span>
+        </h1> 
+      </div>
 
-      <img class="img-soutien img-tab" src="assets/images/image-soutien-1@.jpg" alt="Image de soutien"
-      srcset="assets/images/image-soutien-1@.jpg 1x, assets/images/image-soutien-2@.jpg 2x"
-      loading="lazy" decoding="async">  
-
-      <h1 class="titre-image">Un allié précieux : L'importance du soutien de l'entourage dans la poursuite d'un régime</h1> 
-      
       <button class="menu__burger">
         <span class="top"></span>
         <span class="middle"></span>
@@ -174,6 +173,8 @@
         <span class="bar"></span>
       </div>
 
+      <p>Maintenant, entrons dans le vif du sujet ! Imaginez une application qui non seulement vous motive à suivre votre régime, mais qui devient également votre compagnon de route dans cette aventure. Je vous montrer les fonctionnalités de l’application. Attendez-vous à voir comment ces fonctions vont rendre chaque étape de votre parcours agréable.</p>
+
       <div class="fond__slider">
         <div class="slider">
           <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav"/>
@@ -210,9 +211,9 @@
         </div> 
       </div>
 
-      <button class="btn btn-stat" id="btn_legende">Plus de précision</button>
+      <button class="btn btn-stat">Plus de précision</button>
 
-      <div id="legende" class="hidden">
+      <div id="legende">
         <div class="legende">
 
           <div class="border-legend">
@@ -264,12 +265,12 @@
 
     </section> 
 
-    <section class="section" id="con">
+    <section class="section sect-bac" id="con">
 
       <div class="title-container">
         <span class="bar"></span>
         <h2 class="title title--med">Une brève conclusion ...</h2>
-        <span class="bar"></span>
+        <span class="bar bar-green"></span>
       </div>
 
       <div class="flex-tfa">
