modif css et html

--- a/src/credits.html
+++ b/src/credits.html
@@ -57,13 +57,28 @@
                 <h3 class="title title--light">Images utilisées</h3>
                 <ul class="credits__list">
                     <li class="credits__el">
-                        <a class="link link--credits" href="https://www.svgrepo.com/" target="_blank">
-                        <img class="svg-cred" src="assets/images/link-credit.svg" alt="svg de l'icone de lien">svgrepo</a>
+                        <a class="link link--credits" href="https://www.santelog.com/actualites/sommeil-et-alimentation-nuit-blanche-et-envie-de-malbouffe" target="_blank">
+                        <img class="svg-cred" src="assets/images/link-credit.svg" alt="svg de l'icone de lien">Santelog</a>
                     </li>
 
                     <li class="credits__el">
                         <a class="link link--credits" href="https://unsplash.com/fr" target="_blank">
                         <img class="svg-cred" src="assets/images/link-credit.svg" alt="svg de l'icone de lien">Unsplash</a>
+                    </li>
+
+                    <li class="credits__el">
+                        <a class="link link--credits" href="https://www.journaldesfemmes.fr/beaute/conseils-forme-et-minceur/2809623-applications-gratuites-perte-de-poids/" target="_blank">
+                        <img class="svg-cred" src="assets/images/link-credit.svg" alt="svg de l'icone de lien">Le journal des femmes</a>
+                    </li>
+
+                    <li class="credits__el">
+                        <a class="link link--credits" href="https://www.doctissimo.fr/html/nutrition/dossiers/regimes/8617-regime-minceur-duo-premiere-semaine.htm" target="_blank">
+                        <img class="svg-cred" src="assets/images/link-credit.svg" alt="svg de l'icone de lien">Doctissimo</a>
+                    </li>
+
+                    <li class="credits__el">
+                        <a class="link link--credits" href="https://www.pexels.com/fr-fr/photo/famille-heureuse-dans-la-cuisine-4260096/" target="_blank">
+                        <img class="svg-cred" src="assets/images/link-credit.svg" alt="svg de l'icone de lien">Pexels</a>
                     </li>
                 </ul>
             </div>
