--- a/src/index.html
+++ b/src/index.html
@@ -315,12 +315,9 @@
 
         <div class="border-tfa2">
           <div class="img--container">
-            <img class="img-famille" src="assets/images/familleheureuse@1x.jpg"
-                  alt="Fille qui mange hamburger"
-                  srcset="assets/images/familleheureuse@1x.jpg 1x,
-                          assets/images/familleheureuse@2x.jpg 2x"
-                  loading="lazy"
-                  decoding="async">
+            <img class="img-famille" src="assets/images/familleheureuse@1x.jpg" alt="Fille qui mange hamburger"
+            srcset="assets/images/familleheureuse@1x.jpg 1x, assets/images/familleheureuse@2x.jpg 2x"
+            loading="lazy" decoding="async">
           </div>
         </div>
       </div>
