--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,6 @@
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628">
 
-  
 
   <link rel="stylesheet" href="https://use.typekit.net/gno1llj.css">
 
@@ -113,7 +112,7 @@
 
       <div class="title-container">
         <span class="bar"></span>
-        <h2 class="title title--med">Rencontres avec les utilisateurs</h2>
+          <h2 class="title title--med">Rencontres avec les utilisateurs</h2>
         <span class="bar"></span>
       </div>
 
@@ -173,7 +172,7 @@
 
       <div class="title-container">
         <span class="bar"></span>
-        <h2 class="title title--med">Exploration d'hypothèses</h2>
+          <h2 class="title title--med">Exploration d'hypothèses</h2>
         <span class="bar"></span>
       </div>
 
@@ -186,12 +185,9 @@
         </div>
 
         <div class="border-grid right--img grid--img">
-          <img class="img__grid img__filleham" src="assets/images/filleham@1x.jpg"
-                alt="Fille qui mange hamburger"
-                srcset="assets/images/filleham@1x.jpg 1x,
-                        assets/images/filleham@2x.jpg 2x"
-                loading="lazy"
-                decoding="async">
+          <img class="img__grid img__filleham" src="assets/images/filleham@1x.jpg" alt="Fille qui mange hamburger"
+          srcset="assets/images/filleham@1x.jpg 1x, assets/images/filleham@2x.jpg 2x"
+          loading="lazy" decoding="async">
         </div>
         
         <div class="border-grid right">
@@ -201,12 +197,9 @@
         </div>
 
         <div class="border-grid left--img grid--img">
-          <img class="img__grid img__famille" src="assets/images/famille@1x.jpg"
-                alt="Fille qui mange hamburger"
-                srcset="assets/images/famille@1x.jpg 1x,
-                        assets/images/famille@2x.jpg 2x"
-                loading="lazy"
-                decoding="async">
+          <img class="img__grid img__famille" src="assets/images/famille@1x.jpg" alt="Fille qui mange hamburger"
+          srcset="assets/images/famille@1x.jpg 1x, assets/images/famille@2x.jpg 2x"
+          loading="lazy" decoding="async">
         </div>
 
     </div>
@@ -220,9 +213,11 @@
         <h2 class="title title--med">Boostez votre expérience : Explorez nos&nbsp;fonctionnalités</h2>
         <span class="bar"></span>
       </div>
-    <div class="pad-text"> 
-      <p class="text-width">Maintenant, entrons dans le vif du sujet ! Imaginez une application qui non seulement vous motive à suivre votre régime, mais qui devient également votre compagnon de route dans cette aventure. Je vais vous montrer les fonctionnalités de l’application. Attendez-vous à voir comment ces fonctions vont rendre chaque étape de votre parcours agréable.</p>
-    </div>
+
+      <div class="pad-text"> 
+        <p class="text-width">Maintenant, entrons dans le vif du sujet ! Imaginez une application qui non seulement vous motive à suivre votre régime, mais qui devient également votre compagnon de route dans cette aventure. Je vais vous montrer les fonctionnalités de l’application. Attendez-vous à voir comment ces fonctions vont rendre chaque étape de votre parcours agréable.</p>
+      </div>
+      
       <div class="fond__slider">
         <div class="slider">
 
